--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,6 +16,7 @@ spec:
       containers:
         - name: careconnect-frontend
           image: laendletechregistry.azurecr.io/careconnect-frontend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 3000
           env:
