--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,14 +1,33 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: web
+  name: careconnect-frontend
+  namespace: careconnect
 spec:
   replicas: 1
-  selector: { matchLabels: { app: web } }
+  selector:
+    matchLabels:
+      app: careconnect-frontend
   template:
-    metadata: { labels: { app: web } }
+    metadata:
+      labels:
+        app: careconnect-frontend
     spec:
       containers:
-        - name: web
-          image: laendletechregistry.azurecr.io/careconnect-frontend:latest # wird im Workflow überschrieben
-          ports: [ { containerPort: 3000 } ]
+        - name: careconnect-frontend
+          image: laendletechregistry.azurecr.io/nre7459/careconnectapp:latest
+          imagePullPolicy: Always
+          ports:
+            - containerPort: 3000
+          env:
+            - name: PORT
+              value: "3000"
+            - name: NEXT_PUBLIC_API_URL
+              value: "http://careconnect-api"
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "100m"
+            limits:
+              memory: "512Mi"
+              cpu: "200m"
