--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,4 +1,3 @@
-# ingress.yaml
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
@@ -12,6 +11,7 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   tls:
@@ -22,7 +22,14 @@ spec:
     - host: careconnect.laendletech.at
       http:
         paths:
-          - path: /
+          - path: /api(/|$)(.*)
+            pathType: Prefix
+            backend:
+              service:
+                name: careconnect-api
+                port:
+                  number: 3000
+          - path: /(.*)
             pathType: Prefix
             backend:
               service:
