--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -22,14 +22,14 @@ spec:
     - host: careconnect.laendletech.at
       http:
         paths:
-          - path: /api(/|$)(.*)
+          - path: /api
             pathType: Prefix
             backend:
               service:
                 name: careconnect-api
                 port:
                   number: 3000
-          - path: /(.*)
+          - path: /
             pathType: Prefix
             backend:
               service:
