--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -23,7 +23,7 @@ spec:
             - name: PORT
               value: "3000"
             - name: NEXT_PUBLIC_API_URL
-              value: "http://careconnect-api"
+              value: "https://careconnect.laendletech.at/api"
           resources:
             requests:
               memory: "256Mi"
