--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,3 +21,10 @@ spec:
           env:
             - name: NEXT_PUBLIC_API_URL
               value: "https://careconnect.laendletech.at/api"
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
