--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "latest",
+    "nodemailer": "^7.0.6",
     "react": "^19",
     "react-day-picker": "8.10.1",
     "react-dom": "^19",
