feat: Add environment variables and secrets to Kubernetes deployment
- Add Gmail email configuration to deployment
- Create secrets.yaml for sensitive data (app passwords, OAuth tokens)
- Configure proper secret management for production deployment
- Update deployment with all required environment variables

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -21,6 +21,34 @@ spec:
           env:
             - name: NEXT_PUBLIC_API_URL
               value: "https://careconnect.laendletech.at/api"
+            # E-Mail Konfiguration
+            - name: GMAIL_USER
+              value: "laendletech@gmail.com"
+            - name: GMAIL_APP_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: careconnect-secrets
+                  key: gmail-app-password
+            - name: RECIPIENT_EMAIL
+              value: "info@laendletech.at"
+            - name: CLIENT_ID
+              valueFrom:
+                secretKeyRef:
+                  name: careconnect-secrets
+                  key: client-id
+                  optional: true
+            - name: CLIENT_SECRET
+              valueFrom:
+                secretKeyRef:
+                  name: careconnect-secrets
+                  key: client-secret
+                  optional: true
+            - name: REFRESH_TOKEN
+              valueFrom:
+                secretKeyRef:
+                  name: careconnect-secrets
+                  key: refresh-token
+                  optional: true
           resources:
             requests:
               memory: "256Mi"
