feat: Add survey form with email handler for CareConnect hypothesis testing
- Add comprehensive survey form for family members hypothesis validation
- Implement email handler with nodemailer for survey data collection
- Fix hydration mismatch by removing ThemeProvider
- Add Kubernetes resource limits to deployment
- Update landing page with modern design and survey integration
- Configure email settings for laendletech@gmail.com
- Improve Azure Container Registry login in GitHub Actions workflow

--- a/.github/workflows/main-aks.yml
+++ b/.github/workflows/main-aks.yml
@@ -19,7 +19,13 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - run: az acr login -n ${{ env.REGISTRY }}
+      - name: Set subscription
+        run: |
+          az account set --subscription ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: Login to ACR
+        run: |
+          az acr login -n ${{ env.REGISTRY }} --expose-token --output tsv --query accessToken | docker login ${{ env.REGISTRY }} --username 00000000-0000-0000-0000-000000000000 --password-stdin
 
       - uses: docker/setup-buildx-action@v3
 
