--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: careconnect-frontend-ingress
+  name: careconnect-deployment-ingress
   namespace: careconnect
   annotations:
     kubernetes.io/ingress.class: "nginx"
@@ -11,7 +11,6 @@ metadata:
     nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
     nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: nginx
   tls:
@@ -28,11 +27,11 @@ spec:
               service:
                 name: careconnect-api
                 port:
-                  number: 3000
+                  number: 80
           - path: /
             pathType: Prefix
             backend:
               service:
-                name: careconnect-frontend
+                name: careconnect-deployment
                 port:
                   number: 80
