--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: careconnect-frontend
+  name: careconnect-deployment
   namespace: careconnect
   labels:
-    service: careconnect-frontend
+    service: careconnect-deployment
 spec:
   ports:
     - name: http
@@ -16,5 +16,5 @@ spec:
       targetPort: 3000
       protocol: TCP
   selector:
-    app: careconnect-frontend
+    app: careconnect
   type: ClusterIP
